--- a/WebContent/explore.html
+++ b/WebContent/explore.html
@@ -60,6 +60,35 @@
       z-index: -1;
       pointer-events: none;
     }
+    .ad-card {
+      position: relative;
+      background: rgba(139, 0, 0, 0.9);
+      border: 1px solid rgba(255, 0, 0, 0.3);
+      box-shadow: 
+        0 0 10px rgba(255, 0, 0, 0.3),
+        0 0 20px rgba(255, 0, 0, 0.2),
+        0 0 30px rgba(255, 0, 0, 0.1);
+      transition: all 0.3s ease;
+    }
+    .ad-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 
+        0 0 15px rgba(255, 0, 0, 0.4),
+        0 0 30px rgba(255, 0, 0, 0.3),
+        0 0 45px rgba(255, 0, 0, 0.2);
+    }
+    .ad-card::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at center, rgba(255, 0, 0, 0.2) 0%, transparent 70%);
+      filter: blur(10px);
+      z-index: -1;
+    }
+    .dark .ad-card {
+      background: rgba(139, 0, 0, 0.8);
+      border: 1px solid rgba(255, 0, 0, 0.4);
+    }
   </style>
 </head>
 <body class="bg-white dark:bg-neutral-900 text-neutral-900 dark:text-neutral-100 min-h-screen flex flex-col">
@@ -93,6 +122,11 @@
         <h2 class="font-bold text-lg mb-2">ChatGPT 提示词</h2>
         <p class="mb-2 text-neutral-600 dark:text-neutral-300">高效提升对话体验的精选提示词。</p>
         <a href="prompt-detail.html?id=chatgpt" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl ad-card p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2 text-white">AI提示词社区</h2>
+        <p class="mb-2 text-white/80">加入我们的社区，分享你的AI提示词经验！</p>
+        <a href="#" class="text-white hover:text-red-200 transition">立即加入</a>
       </div>
       <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
         <h2 class="font-bold text-lg mb-2">Midjourney 绘画</h2>
