--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -108,6 +108,7 @@
         <a href="index.html" class="font-bold text-xl tracking-tight neon-logo">Awesome Prompts</a>
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="text-blue-600 font-semibold" data-i18n="home">首页</a>
+          <a href="create.html" class="hover:text-blue-600" data-i18n="create">创建</a>
           <a href="category.html" class="hover:text-blue-600" data-i18n="category">分类</a>
           <a href="explore.html" class="hover:text-blue-600" data-i18n="explore">探索</a>
           <a href="about.html" class="hover:text-blue-600" data-i18n="about">关于</a>
