--- a/WebContent/prompt-detail.html
+++ b/WebContent/prompt-detail.html
@@ -1,39 +1,64 @@
 <!DOCTYPE html>
-<html lang="zh" class="light">
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>提示词详情 - AI提示词大全</title>
   <link href="assets/css/tailwind.css" rel="stylesheet">
+  <link href="assets/css/common.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="assets/js/theme.js" defer></script>
-  <script src="assets/js/lang.js" defer></script>
+  <script src="assets/js/common.js" defer></script>
 </head>
 <body class="bg-white dark:bg-neutral-900 text-neutral-900 dark:text-neutral-100 min-h-screen flex flex-col">
-  <header class="backdrop-blur bg-white/80 dark:bg-neutral-900/80 border-b border-neutral-200 dark:border-neutral-800 sticky top-0 z-30">
+  <header class="backdrop-blur bg-white/80 dark:bg-neutral-900/80 border-b border-neutral-200 dark:border-neutral-800 sticky top-0 z-50">
     <div class="max-w-5xl mx-auto flex items-center justify-between px-4 py-3">
       <div class="flex items-center gap-4">
-        <a href="index.html" class="font-bold text-xl tracking-tight">AI Prompts</a>
+        <a href="index.html" class="font-bold text-xl tracking-tight neon-logo">Awesome Prompts</a>
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="hover:text-blue-600" data-i18n="home">首页</a>
+          <a href="create.html" class="hover:text-blue-600" data-i18n="create">创建</a>
           <a href="category.html" class="hover:text-blue-600" data-i18n="category">分类</a>
           <a href="explore.html" class="hover:text-blue-600" data-i18n="explore">探索</a>
           <a href="about.html" class="hover:text-blue-600" data-i18n="about">关于</a>
         </nav>
       </div>
       <div class="flex items-center gap-2">
-        <button id="theme-toggle" onclick="toggleTheme()" class="rounded px-2 py-1 hover:bg-neutral-100 dark:hover:bg-neutral-800" title="切换明暗模式">
-          <span id="theme-icon">🌞</span>
-        </button>
-        <button id="lang-toggle" onclick="toggleLang()" class="rounded px-2 py-1 hover:bg-neutral-100 dark:hover:bg-neutral-800" title="切换语言">
-          <span id="lang-icon">中/En</span>
-        </button>
-        <button id="settings-toggle" onclick="location.href='settings.html'" class="rounded px-2 py-1 hover:bg-neutral-100 dark:hover:bg-neutral-800" title="设置">
-          <span id="settings-icon">⚙️</span>
+        <button id="avatarButton" class="avatar-button">
+          <img src="assets/img/hanz-avatar.png" alt="Avatar">
         </button>
       </div>
     </div>
   </header>
+
+  <!-- 侧边栏 -->
+  <div id="sidebar" class="sidebar">
+    <div class="sidebar-content">
+      <a href="settings.html" class="sidebar-item">
+        <i class="fas fa-cog"></i>
+        <span>设置</span>
+      </a>
+      <a href="profile.html" class="sidebar-item">
+        <i class="fas fa-user"></i>
+        <span>个人资料</span>
+      </a>
+      <a href="about.html" class="sidebar-item">
+        <i class="fas fa-info-circle"></i>
+        <span>关于</span>
+      </a>
+      <a href="help.html" class="sidebar-item">
+        <i class="fas fa-question-circle"></i>
+        <span>帮助</span>
+      </a>
+      <div class="sidebar-divider"></div>
+      <a href="logout.html" class="sidebar-item text-red-500">
+        <i class="fas fa-sign-out-alt"></i>
+        <span>退出登录</span>
+      </a>
+    </div>
+  </div>
+  <div id="sidebarOverlay" class="sidebar-overlay"></div>
+
   <main class="flex-1 max-w-3xl mx-auto px-4 py-12">
     <h1 class="text-3xl md:text-4xl font-bold mb-4">ChatGPT 提示词</h1>
     <p class="mb-6 text-neutral-600 dark:text-neutral-300">高效提升对话体验的精选提示词。</p>
